--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div id="d">
         <button type="button" id="inc" onclick="inc()">+</button>
         <h1 id="a">0</h1>
-        <button type="button" id="dec" onclick="dec()">-</button>       
+        <button type="button" id="dec" onclick="dec()">-</button>
+        <button type="button" id="i" onclick="reset()">Reset</button>      
     </div>
     
 </body>
